[package]
name = "rust-arduino-blink"
version = "0.1.0"
authors = ["Matthew Fisher <matt.fisher@microsoft.com>"]
edition = "2018"

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
panic-halt = "0.2"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
